--- a/blog.html
+++ b/blog.html
@@ -235,7 +235,7 @@
 	<!-- Footer End -->
 	<!-- Blog Data Api -->
 
-    <script src="./js/data.js"></script>	
+    <script src="./js/api.js"></script>	
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Jquery Library File -->
     <script src="js/jquery-3.7.1.min.js"></script>
