--- a/index.html
+++ b/index.html
@@ -965,7 +965,7 @@
 	</footer>
 	<!-- Footer End -->
 	<!-- json services -->
-	<script src="./js/api.js"></script>
+	<script src="./js/data.js"></script>
     <!-- Jquery Library File -->
     <script src="js/jquery-3.7.1.min.js"></script>
     <!-- Bootstrap js file -->
