--- a/services.html
+++ b/services.html
@@ -624,7 +624,7 @@
     </footer>
     <!-- Footer End -->
 
-    <script src="./js/api.js"></script>
+    <script src="./js/data.js"></script>
 
     <!-- Jquery Library File -->
 
