--- a/services.html
+++ b/services.html
@@ -624,7 +624,43 @@
     </footer>
     <!-- Footer End -->
 
-    <script src="./js/data.js"></script>
+    <script >
+        // Services For Serive page
+fetch('data/services.json')
+    .then(response => response.json())
+    .then(data => {
+        const services = data.services;
+        const servicesRow = document.getElementById('services-row');
+
+        // Create dynamic service cards
+        services.forEach(service => {
+            const serviceCard = document.createElement('div');
+            serviceCard.classList.add('col-lg-4', 'col-md-6', 'col-12', 'service-card', 'wow', 'fadeInUp');
+
+            serviceCard.innerHTML = `
+                        <div class="our-services-item">
+                            <div class="service-item-image">
+                                <img src="${service.image}" alt="${service.name}">
+                            </div>
+                            <div class="services-item-content">
+                                <h3>${service.name}</h3>
+                                <p>${service.paragraph}</p>
+                                <ul>
+                                    ${service.points.map(point => `<li>${point}</li>`).join('')}
+                                </ul>
+                            </div>
+                            <div class="services-item-btn">
+                                <a href="${service.link}" class="btn-default">Read More</a>
+                            </div>
+                        </div>
+                    `;
+
+            servicesRow.appendChild(serviceCard);
+        });
+    })
+    .catch(error => console.error('Error fetching services data:', error));
+
+    </script>
 
     <!-- Jquery Library File -->
 
