same page javascript

--- a/blog.html
+++ b/blog.html
@@ -114,13 +114,7 @@
                 <div class="col-md-12">
                     <!-- Post Pagination Start -->
 					<div class="post-pagination wow fadeInUp" data-wow-delay="0.75s" style="visibility: hidden; animation-delay: 0.75s; animation-name: none;">
-						<ul class="pagination">
-							<li><a href="#"><i class="fa-solid fa-arrow-left-long"></i></a></li>
-							<li class="active"><a href="#">1</a></li>
-							<li><a href="#">2</a></li>
-							<li><a href="#">3</a></li>
-							<li><a href="#"><i class="fa-solid fa-arrow-right-long"></i></a></li>
-						</ul>
+						<div id="pagination"></div>
 					</div>
 					<!-- Post Pagination End -->
                 </div>
@@ -240,7 +234,66 @@
 	<!-- Footer End -->
 	<!-- Blog Data Api -->
 
-    <script src="./js/data.js"></script>
+    <script>
+		 fetch('data/blog.json')
+        .then(response => response.json())
+        .then(data => {
+            const blogCardsContainer = document.getElementById('blogCards');
+            const paginationContainer = document.getElementById('pagination');
+            const blogsPerPage = 6;
+            let currentPage = 1;
+
+            function displayBlogCards(page) {
+                blogCardsContainer.innerHTML = '';
+                const startIndex = (page - 1) * blogsPerPage;
+                const endIndex = startIndex + blogsPerPage;
+                const currentBlogs = data.blogs.slice(startIndex, endIndex);
+
+                currentBlogs.forEach(blog => {
+                    const blogCard = `
+                        <div class="col-lg-4 col-md-6">
+                            <div class="post-item wow fadeInUp" data-wow-delay="0.25s">
+                                <div class="post-featured-image">
+                                    <figure class="image-anime">
+                                        <a href="${blog.read_more}"><img src="${blog.img}" alt=""></a>
+                                    </figure>
+                                </div>
+                                <div class="post-item-body">
+                                    <h2><a href="${blog.read_more}">${blog.title}</a></h2>
+                                    <p>${blog.content}</p>
+                                </div>
+                                <div class="btn-readmore">
+                                    <a href="${blog.read_more}">Read More <i class="fa-solid fa-arrow-right-long"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    `;
+                    blogCardsContainer.innerHTML += blogCard;
+                });
+            }
+
+            function setupPagination() {
+                const totalPages = Math.ceil(data.blogs.length / blogsPerPage);
+                let paginationButtons = '';
+                for (let i = 1; i <= totalPages; i++) {
+                    paginationButtons += `<button onclick="displayBlogCards(${i})">${i}</button>`;
+                }
+                paginationContainer.innerHTML = paginationButtons;
+            }
+
+            setupPagination(); // Call setupPagination initially
+
+            displayBlogCards(currentPage); // Call displayBlogCards with initial page
+
+            // Update pagination and display cards when a pagination number is clicked
+            paginationContainer.addEventListener('click', (event) => {
+                if (event.target.tagName === 'BUTTON') {
+                    currentPage = parseInt(event.target.textContent);
+                    displayBlogCards(currentPage);
+                }
+            });
+        });
+	</script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Jquery Library File -->
     <script src="js/jquery-3.7.1.min.js"></script>
