--- a/index.html
+++ b/index.html
@@ -965,7 +965,41 @@
 	</footer>
 	<!-- Footer End -->
 	<!-- json services -->
-	<script src="./js/data.js"></script>
+	<script>
+		//  5 services for index page
+// data.js
+fetch('data/services.json')
+    .then(response => response.json())
+    .then(data => {
+        const services = data.services.slice(0, 5); // Get only the top 5 services
+        const servicesRow = document.getElementById('services-row-index');
+
+        services.forEach(service => {
+            const serviceCard = document.createElement('div');
+            serviceCard.classList.add('col-lg-4', 'col-md-4'); // Adjusted class to match the provided HTML
+
+            serviceCard.innerHTML = `
+                <div class="medical-service-item wow fadeInUp">
+                    <div class="medical-service-content">
+                        <div class="icon-box">
+                            <img src="${service.image}" alt="">
+                        </div>
+                        <div class="medical-content">
+                            <h3>${service.name}</h3>
+                            <p>${service.paragraph}</p>
+                        </div>
+                        <div class="medical-service-btn">
+                            <a href="${service.link}" class="btn-services">read more <i class="far fa-arrow-alt-circle-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+            `;
+
+            servicesRow.appendChild(serviceCard);
+        });
+    })
+    .catch(error => console.error('Error fetching services data:', error));
+	</script>
     <!-- Jquery Library File -->
     <script src="js/jquery-3.7.1.min.js"></script>
     <!-- Bootstrap js file -->
