service page set up

--- a/blog.html
+++ b/blog.html
@@ -180,7 +180,7 @@
 						<div class="footer-quick-links">
 							<h2>quick links</h2>
 							<ul>                                        
-								<li class="nav-item"><a class="nav-link" href="services-single.html">Service Single</a></li>
+								<li class="nav-item"><a class="nav-link" href="services/services-detail.html">Service Single</a></li>
 								<li class="nav-item"><a class="nav-link" href="blog-single.html">Blog Single</a></li>
 								<li class="nav-item"><a class="nav-link" href="team.html">Our Team</a></li>
 								<li class="nav-item"><a class="nav-link" href="team-single.html">Team details</a></li>
