--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
                     <!-- Section Title Start -->
                     <div class="section-title">
                         <h3 class="wow fadeInUp">our blog</h3>
-                        <h2 class="text-anime-style-3">Lates News & Articles.</h2>
+                        <h2 class="text-anime-style-3">Latest News & Articles.</h2>
                     </div>
                     <!-- Section Title End -->
                 </div>
@@ -912,7 +912,7 @@
 						<div class="footer-quick-links">
 							<h2>quick links</h2>
 							<ul>                                        
-								<li class="nav-item"><a class="nav-link" href="services-single.html">Service Single</a></li>
+								<li class="nav-item"><a class="nav-link" href="services/services-detail.html">Service Single</a></li>
 								<li class="nav-item"><a class="nav-link" href="blog-single.html">Blog Single</a></li>
 								<li class="nav-item"><a class="nav-link" href="team.html">Our Team</a></li>
 								<li class="nav-item"><a class="nav-link" href="team-single.html">Team details</a></li>
