--- a/services/services-detail.html
+++ b/services/services-detail.html
@@ -11,25 +11,25 @@
 	<!-- Page Title -->
 	<title>MediPro - Hospital HTML Template</title>
 	<!-- Favicon Icon -->
-	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
+	<link rel="shortcut icon" type="image/x-icon" href="../images/favicon.png">
     <!-- Google Fonts css-->
     <link rel="preconnect" href="https://fonts.googleapis.com/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&amp;display=swap" rel="stylesheet">
 	<!-- Bootstrap Css -->
-	<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+	<link href="../css/bootstrap.min.css" rel="stylesheet" media="screen">
 	<!-- SlickNav Css -->
-	<link href="css/slicknav.min.css" rel="stylesheet">
+	<link href="../css/slicknav.min.css" rel="stylesheet">
 	<!-- Swiper Css -->
-	<link rel="stylesheet" href="css/swiper-bundle.min.css">
+	<link rel="stylesheet" href="../css/swiper-bundle.min.css">
 	<!-- Font Awesome Icon Css-->
-	<link href="css/all.css" rel="stylesheet" media="screen">
+	<link href="../css/all.css" rel="stylesheet" media="screen">
 	<!-- Animated Css -->
-	<link href="css/animate.css" rel="stylesheet">
+	<link href="../css/animate.css" rel="stylesheet">
 	<!-- Magnific Popup core CSS file -->
-	<link rel="stylesheet" href="css/magnific-popup.css">
+	<link rel="stylesheet" href="../css/magnific-popup.css">
 	<!-- Main custom Css -->
-	<link href="css/custom.css" rel="stylesheet" media="screen">
+	<link href="../css/custom.css" rel="stylesheet" media="screen">
 </head>
 
 <body class="tt-magic-cursor">
@@ -38,7 +38,7 @@
 	<div class="preloader">
 		<div class="loading-container">
 			<div class="loading"></div>
-			<div id="loading-icon"><img src="images/loader.svg" alt=""></div>
+			<div id="loading-icon"><img src="../images/loader.svg" alt=""></div>
 		</div>
 	</div>
 	<!-- Preloader End -->
@@ -56,8 +56,8 @@
 				<div class="container">
 					<!-- Logo Start -->
 					<div class="header-logo">
-						<a class="navbar-brand" href="index.html">
-							<img src="images/logo.svg" alt="">
+						<a class="navbar-brand" href="../index.html">
+							<img src="../images/logo.svg" alt="">
 						</a>
 					</div>
 					<!-- Logo End -->
@@ -66,13 +66,13 @@
 					<div class="collapse navbar-collapse main-menu">
                         <div class="nav-menu-wrapper">
                             <ul class="navbar-nav mr-auto" id="menu">
-                                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                                <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
-                                <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-								<li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
+                                <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
+                                <li class="nav-item"><a class="nav-link" href="../about.html">About Us</a></li>
+                                <li class="nav-item"><a class="nav-link" href="../services.html">Services</a></li>
+								<li class="nav-item"><a class="nav-link" href="../blog.html">Blog</a></li>
                                 </li>
-                                <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
-                                <li class="nav-item highlighted-menu"><a class="nav-link" href="appointment.html">Book Appointment <i class="fa-solid fa-calendar-days"></i></a></li>
+                                <li class="nav-item"><a class="nav-link" href="../contact.html">Contact Us</a></li>
+                                <li class="nav-item highlighted-menu"><a class="nav-link" href="../appointment.html">Book Appointment <i class="fa-solid fa-calendar-days"></i></a></li>
                             </ul>
                         </div>
 					</div>
@@ -94,8 +94,8 @@
                     <div class="subpage-header-box">
                         <h1 class="text-anime-style-3">Pathology Clinic</h1>
                         <ol class="breadcrumb wow fadeInUp">
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">services</a></li>
+                            <li><a href="../index.html">Home</a></li>
+                            <li><a href="../services.html">services</a></li>
                             <li>pathology clinic</li>
                         </ol>
                     </div>
@@ -118,7 +118,7 @@
                             <div class="service-video">
                                 <div class="services-single-image">
                                     <figure class="image-anime">
-                                        <img src="images/cultuer-1.jpg" alt="">
+                                        <img src="../images/cultuer-1.jpg" alt="">
                                     </figure>
                                 </div>
                                 <!-- Service Featured Image End -->
@@ -252,7 +252,7 @@
                                         <div class="service-item">
                                             <!-- Icon Box Start -->
                                             <div class="service-icon">
-                                                <img src="images/icon-service-single-medical-1.svg" alt="">
+                                                <img src="../images/icon-service-single-medical-1.svg" alt="">
                                             </div>
                                             <!-- Icon Box End -->
                                             <div class="service-title">
@@ -267,7 +267,7 @@
                                         <div class="service-item">
                                             <!-- Icon Box Start -->
                                             <div class="service-icon">
-                                                <img src="images/icon-service-single-medical-2.svg" alt="">
+                                                <img src="../images/icon-service-single-medical-2.svg" alt="">
                                             </div>
                                             <!-- Icon Box End -->
                                             <div class="service-title">
@@ -282,7 +282,7 @@
                                         <div class="service-item">
                                             <!-- Icon Box Start -->
                                             <div class="service-icon">
-                                                <img src="images/icon-service-single-medical-3.svg" alt="">
+                                                <img src="../images/icon-service-single-medical-3.svg" alt="">
                                             </div>
                                             <!-- Icon Box End -->
                                             <div class="service-title">
@@ -297,7 +297,7 @@
                                         <div class="service-item">
                                             <!-- Icon Box Start -->
                                             <div class="service-icon">
-                                                <img src="images/icon-service-single-medical-4.svg" alt="">
+                                                <img src="../images/icon-service-single-medical-4.svg" alt="">
                                             </div>
                                             <!-- Icon Box End -->
                                             <div class="service-title">
@@ -341,7 +341,7 @@
                     <div class="working-process-item wow fadeInUp">
                         <!-- Icon Box Start -->
                         <div class="icon-box">
-                            <img src="images/icon-working-process-1.svg" alt="">
+                            <img src="../images/icon-working-process-1.svg" alt="">
                         </div>
                         <!-- Icon Box End -->
 
@@ -366,7 +366,7 @@
                     <div class="working-process-item bg-color wow fadeInUp" data-wow-delay="0.25s">
                         <!-- Icon Box Start -->
                         <div class="icon-box">
-                            <img src="images/icon-working-process-2.svg" alt="">
+                            <img src="../images/icon-working-process-2.svg" alt="">
                         </div>
                         <!-- Icon Box End -->
 
@@ -391,7 +391,7 @@
                     <div class="working-process-item bg-color wow fadeInUp" data-wow-delay="0.5s">
                         <!-- Icon Box Start -->
                         <div class="icon-box">
-                            <img src="images/icon-working-process-3.svg" alt="">
+                            <img src="../images/icon-working-process-3.svg" alt="">
                         </div>
                         <!-- Icon Box End -->
 
@@ -416,7 +416,7 @@
                     <div class="working-process-item wow fadeInUp" data-wow-delay="0.75s">
                         <!-- Icon Box Start -->
                         <div class="icon-box">
-                            <img src="images/icon-working-process-4.svg" alt="">
+                            <img src="../images/icon-working-process-4.svg" alt="">
                         </div>
                         <!-- Icon Box End -->
 
@@ -452,7 +452,7 @@
 							<!-- Footer Logo Start -->
 							<div class="footer-logo">
 								<figure>
-									<img src="images/footer-logo.svg" alt="">
+									<img src="../images/footer-logo.svg" alt="">
 								</figure>
 							</div>
 							<!-- Footer Logo End -->
@@ -483,11 +483,11 @@
 						<div class="footer-quick-links">
 							<h2>quick links</h2>
 							<ul>
-								<li><a href="index.html">home</a></li>
-								<li><a href="about.html">about us</a></li>
-								<li><a href="team.html">Our-Team</a></li>
-								<li><a href="services.html">services</a></li>
-								<li><a href="contact.html">contact us</a></li>
+								<li><a href="../index.html">home</a></li>
+								<li><a href="../about.html">about us</a></li>
+								<li><a href="../team.html">Our-Team</a></li>
+								<li><a href="../services.html">services</a></li>
+								<li><a href="../contact.html">contact us</a></li>
 							</ul>
 						</div>
 						<!-- Footer Quick Links End -->
@@ -499,9 +499,9 @@
 							<ul>                                        
 								<li class="nav-item"><a class="nav-link" href="services-single.html">Service Single</a></li>
 								<li class="nav-item"><a class="nav-link" href="blog-single.html">Blog Single</a></li>
-								<li class="nav-item"><a class="nav-link" href="team.html">Our Team</a></li>
-								<li class="nav-item"><a class="nav-link" href="team-single.html">Team details</a></li>
-								<li class="nav-item"><a class="nav-link" href="faqs.html">FAQs</a></li>
+								<li class="nav-item"><a class="nav-link" href="../team.html">Our Team</a></li>
+								<li class="nav-item"><a class="nav-link" href="../team-single.html">Team details</a></li>
+								<li class="nav-item"><a class="nav-link" href="../faqs.html">FAQs</a></li>
 								
 							</ul>
 						</div>
@@ -550,34 +550,35 @@
 	</footer>
 	<!-- Footer End -->
 	
+    
     <!-- Jquery Library File -->
-    <script src="js/jquery-3.7.1.min.js"></script>
+    <script src="../js/jquery-3.7.1.min.js"></script>
     <!-- Bootstrap js file -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
     <!-- Validator js file -->
-    <script src="js/validator.min.js"></script>
+    <script src="../js/validator.min.js"></script>
     <!-- SlickNav js file -->
-    <script src="js/jquery.slicknav.js"></script>
+    <script src="../js/jquery.slicknav.js"></script>
     <!-- Swiper js file -->
-    <script src="js/swiper-bundle.min.js"></script>
+    <script src="../js/swiper-bundle.min.js"></script>
     <!-- Counter js file -->
-    <script src="js/jquery.waypoints.min.js"></script>
-    <script src="js/jquery.counterup.min.js"></script>
+    <script src="../js/jquery.waypoints.min.js"></script>
+    <script src="../js/jquery.counterup.min.js"></script>
     <!-- Magnific js file -->
-    <script src="js/jquery.magnific-popup.min.js"></script>
+    <script src="../js/jquery.magnific-popup.min.js"></script>
     <!-- SmoothScroll -->
-    <script src="js/SmoothScroll.js"></script>
+    <script src="../js/SmoothScroll.js"></script>
     <!-- Parallax js -->
-    <script src="js/parallaxie.js"></script>
+    <script src="../js/parallaxie.js"></script>
     <!-- MagicCursor js file -->
-    <script src="js/gsap.min.js"></script>
-    <script src="js/magiccursor.js"></script>
+    <script src="../js/gsap.min.js"></script>
+    <script src="../js/magiccursor.js"></script>
     <!-- Text Effect js file -->
-    <script src="js/SplitText.js"></script>
-    <script src="js/ScrollTrigger.min.js"></script>
+    <script src="../js/SplitText.js"></script>
+    <script src="../js/ScrollTrigger.min.js"></script>
     <!-- Wow js file -->
-    <script src="js/wow.js"></script>
+    <script src="../js/wow.js"></script>
     <!-- Main Custom js file -->
-    <script src="js/function.js"></script>
+    <script src="../js/function.js"></script>
 </body>
 </html>
