index page content complete

--- a/blog-single.html
+++ b/blog-single.html
@@ -302,7 +302,7 @@
 
 							<!-- Footer Content Start -->
 							<div class="footer-content">
-								<p>Our family-centered approach to healthcare ensures that each member of your family receives personalized attention.</p>
+								<p>Our healthcare focuses on your family, ensuring personalized care for each member. Experience our dedicated approach to keeping your loved ones healthy and happy.</p>
 							</div>
 							<!-- Footer Content End -->
 
@@ -340,11 +340,10 @@
 						<div class="footer-quick-links">
 							<h2>quick links</h2>
 							<ul>                                        
-								<li class="nav-item"><a class="nav-link" href="services/services-detail.html">Service Single</a></li>
-								<li class="nav-item"><a class="nav-link" href="blog-single.html">Blog Single</a></li>
-								<li class="nav-item"><a class="nav-link" href="team.html">Our Team</a></li>
-								<li class="nav-item"><a class="nav-link" href="team-single.html">Team details</a></li>
+								<li class="nav-item"><a class="nav-link" href="services/services-detail.html">Single</a></li>
+								<li class="nav-item"><a class="nav-link" href="blog-single.html">Blogs</a></li>
 								<li class="nav-item"><a class="nav-link" href="faqs.html">FAQs</a></li>
+								<li class="nav-item"><a class="nav-link" href="appointment.html">Appointment</a></li>
 								
 							</ul>
 						</div>
