--- a/services/services-detail.html
+++ b/services/services-detail.html
@@ -459,7 +459,7 @@
 
 							<!-- Footer Content Start -->
 							<div class="footer-content">
-								<p>Our family-centered approach to healthcare ensures that each member of your family receives personalized attention.</p>
+								<p>Our healthcare focuses on your family, ensuring personalized care for each member. Experience our dedicated approach to keeping your loved ones healthy and happy.</p>
 							</div>
 							<!-- Footer Content End -->
 
