--- a/faqs.html
+++ b/faqs.html
@@ -423,7 +423,7 @@
 						<div class="col-lg-12">
 							<!-- Footer Copyright Start -->
 							<div class="footer-copyright-text">
-								<p>copyright 2024 © <span>MediPro</span> all right reserved.</p>
+								<p>copyright 2024 © <a href="https://magnumkare.cloud/"><span>MagnumKare</span></a> all right reserved.</p>
 							</div>
 							<!-- Footer Copyright End -->
 						</div>
