--- a/index.html
+++ b/index.html
@@ -908,7 +908,7 @@
 						<div class="col-lg-12">
 							<!-- Footer Copyright Start -->
 							<div class="footer-copyright-text">
-								<p>copyright 2024 © <span>MediPro</span> all right reserved.</p>
+								<p>copyright 2024 © <a href="https://magnumkare.cloud/"><span>MagnumKare</span></a> all right reserved.</p>
 							</div>
 							<!-- Footer Copyright End -->
 						</div>
@@ -956,7 +956,7 @@
 			})
 			.catch(error => console.error('Error fetching services data:', error));
 	</script>
-
+<!-- Blog script -->
 	<script>
 		fetch('data/blog.json')
 			.then(response => response.json())
