--- a/services.html
+++ b/services.html
@@ -115,8 +115,8 @@
             <div class="row section-row">
                 <div class="col-md-12">
                     <div class="section-title">
-                        <h3 class="wow fadeInUp">our services</h3>
-                        <h2 class="text-anime-style-3">Providing Medical Care For TheSickest In Our Community.</h2>
+                        <h3 class="wow fadeInUp">Discover Our Services</h3>
+                        <h2 class="text-anime-style-3">Caring for the Health of Our Community</h2>
                     </div>
                 </div>
             </div>
@@ -611,7 +611,7 @@
                         <div class="col-lg-12">
                             <!-- Footer Copyright Start -->
                             <div class="footer-copyright-text">
-                                <p>copyright 2024 © <span>MediPro</span> all right reserved.</p>
+                                <p>copyright 2024 © <span>MagnumKare</span> all right reserved.</p>
                             </div>
                             <!-- Footer Copyright End -->
                         </div>
