about-us page complete

--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
 													<h3>Dr. Sanjeev Kumar</h3>
 												</div>
 												<div class="testimonial-title">
-													<p>Accountant</p>
+													<p>Doctor</p>
 												</div>
 											</div>
 										</div>
