--- a/404.html
+++ b/404.html
@@ -137,7 +137,7 @@
 							<!-- Footer Logo Start -->
 							<div class="footer-logo">
 								<figure>
-									<img src="images/footer-logo.svg" alt="">
+									<img src="images/logo.svg" alt="">
 								</figure>
 							</div>
 							<!-- Footer Logo End -->
