--- a/about.html
+++ b/about.html
@@ -124,11 +124,18 @@
 
                         <!-- Page About Body Start -->
                         <div class="page-about-body">
-                            <p class=" wow fadeInUp">Welcome to S.B Diagnostics, your trusted partner in healthcare and
+                            <h3 class="wow fadeInDown">About Diagnostics</h3>
+
+                            <p class=" wow fadeInLeft">Welcome to S.B Diagnostics, your trusted partner in healthcare and
                                 diagnostic services in Sinzai, More, Kachcha Katra Rd, Uttar Pradesh. Established over a
                                 decade ago, we have been committed to providing accurate and reliable diagnostic
                                 services to our community. Our state-of-the-art facility is equipped with advanced
                                 technology to ensure the highest standards of care and precision.</p>
+                        </div>
+                        <div class="page-about-body">
+                            <h3 class="wow fadeInRight">Meet Our Expert</h3>
+
+                            <p class=" wow fadeInUp">Dr. Subrat Gupta leads our team with his extensive expertise in radiology. He holds an M.B.B.S. and DMRD, making him a trusted name in diagnostic services. Under his guidance, we ensure that each patient receives precise and thorough care.</p>
                         </div>
                         <!-- Page About Body End -->
 
@@ -266,8 +273,8 @@
                 <div class="col-lg-10 col-md-12">
                     <!-- Section Title Start -->
                     <div class="section-title">
-                        <h3 class="wow fadeInUp">caring for the health of you and your family.</h3>
-                        <h2 class="text-anime-style-3">We Provide All Aspects Of Medical Practice For Your Whole Family!
+                        <h3 class="wow fadeInUp">CARING FOR THE HEALTH OF YOU AND YOUR FAMILY</h3>
+                        <h2 class="text-anime-style-3">We Offer Complete Diagnostics Medical Care for Your Whole Family!
                         </h2>
                     </div>
                     <!-- Section Title End -->
@@ -277,11 +284,8 @@
                 <div class="col-lg-6">
                     <!-- health Services Content Start -->
                     <div class="health-services-content">
-                        <h2 class="wow fadeInUp">Welcome to medipro, where we offer comprehensive medical care tailored
-                            to every member of your family.</h2>
-                        <p class="wow fadeInUp" data-wow-delay="0.25s">Our dedicated team of healthcare professionals is
-                            committed to providing you and your loved ones with personalized and compassionate
-                            healthcare services. We understand the importance of family health.</p>
+                        <h2 class="wow fadeInUp">Welcome to S.B. Diagnostics, where we offer personalized medical care for every member of your family.</h2>
+                        <p class="wow fadeInUp" data-wow-delay="0.25s">Our dedicated healthcare team is here to provide compassionate, personalized care to you and your loved ones. We know how important family health is to your happiness and well-being.</p>
                         <ul class="wow fadeInUp" data-wow-delay="0.5s">
                             <li>Family-Centered Care</li>
                             <li>Preventive Services</li>
@@ -304,8 +308,7 @@
                             </div>
                             <div class="health-info-content">
                                 <h3>patient information</h3>
-                                <p>I hereby give consent to and its healthcare professionals to provide medical
-                                    treatment.</p>
+                                <p>I hereby give consent to S.B. Diagnostics and its healthcare professionals to provide diagnostics service.</p>
                             </div>
                         </div>
                         <!-- health Services Item Start  -->
@@ -317,7 +320,7 @@
                             </div>
                             <div class="health-info-content">
                                 <h3>emergency contact</h3>
-                                <p>This application form is for informational purposes only and does not guarantee.</p>
+                                <p>This application form is for informational purposes only and does not guarantee emergency medical services.</p>
                             </div>
                         </div>
                         <!-- health Services Item Start  -->
@@ -329,7 +332,7 @@
                             </div>
                             <div class="health-info-content">
                                 <h3>medical history</h3>
-                                <p>our medical history is a vital piece of information that provides healthcare.</p>
+                                <p>Your medical history is a vital piece of information that helps our healthcare team provide the best possible care.</p>
                             </div>
                         </div>
                         <!-- health Services Item End  -->
@@ -646,7 +649,7 @@
                                                     <h3>Dr. Sanjeev Kumar</h3>
                                                 </div>
                                                 <div class="testimonial-title">
-                                                    <p>Accountant</p>
+                                                    <p>Doctor</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -749,7 +752,7 @@
                             <!-- Footer Logo Start -->
                             <div class="footer-logo">
                                 <figure>
-                                    <img src="images/footer-logo.svg" alt="">
+                                    <img src="images/logo.svg" alt="">
                                 </figure>
                             </div>
                             <!-- Footer Logo End -->
