--- a/blog.html
+++ b/blog.html
@@ -135,7 +135,7 @@
 							<!-- Footer Logo Start -->
 							<div class="footer-logo">
 								<figure>
-									<img src="images/footer-logo.svg" alt="">
+									<img src="images/logo.svg" alt="">
 								</figure>
 							</div>
 							<!-- Footer Logo End -->
