--- a/services.html
+++ b/services.html
@@ -140,17 +140,15 @@
                 <div class="col-md-6">
                     <!-- Section Title Start -->
                     <div class="section-title">
-                        <h3 class="wow fadeInUp">top service</h3>
-                        <h2 class="text-anime-style-3">We Are a Pogressive Medical Clinic.</h2>
+                        <h3 class="wow fadeInUp">pathology service</h3>
+                        <h2 class="text-anime-style-3">Pathology Excellence at Your Service</h2>
                     </div>
                     <!-- Section Title End -->
                 </div>
                 <div class="col-md-6">
                     <!-- Section Title Content Start -->
                     <div class="section-title-content">
-                        <p class="wow fadeInUp">Welcome to our comprehensive medical services designed to cater to your
-                            diverse healthcare needs. We are committed to delivering top-notch medical care with a
-                            patient-centered approach.</p>
+                        <p class="wow fadeInUp">Explore the depths of your health through Pathology at S.B. Diagnostics. Discover clarity and insight into your well-being with our comprehensive tests:</p>
                     </div>
                     <!-- Section Title Content End -->
                 </div>
@@ -161,10 +159,10 @@
                     <!-- Specialist Item Start -->
                     <div class="specialist-item wow fadeInUp">
                         <div class="icon-box">
-                            <img src="images/icon-specialist-1.svg" alt="">
+                            <img src="images/services/pathology/biopsy.png" alt="">
                         </div>
                         <div class="specialist-content">
-                            <h3>cardiology</h3>
+                            <h3>biopsy</h3>
                             <a href="#"><i class="fas fa-arrow-alt-circle-right"></i></a>
                         </div>
                     </div>
@@ -175,10 +173,10 @@
                     <!-- Specialist Item Start -->
                     <div class="specialist-item wow fadeInUp" data-wow-delay="0.25s">
                         <div class="icon-box">
-                            <img src="images/icon-specialist-2.svg" alt="">
+                            <img src="images/services/pathology/blood-analysis.png" alt="">
                         </div>
                         <div class="specialist-content">
-                            <h3>diagnostics</h3>
+                            <h3>blood analysis</h3>
                             <a href="#"><i class="fas fa-arrow-alt-circle-right"></i></a>
                         </div>
                     </div>
@@ -189,10 +187,10 @@
                     <!-- Specialist Item Start -->
                     <div class="specialist-item wow fadeInUp" data-wow-delay="0.5s">
                         <div class="icon-box">
-                            <img src="images/icon-specialist-3.svg" alt="">
+                            <img src="images/services/pathology/blood-test.png" alt="">
                         </div>
                         <div class="specialist-content">
-                            <h3>virology</h3>
+                            <h3>Blood Test</h3>
                             <a href="#"><i class="fas fa-arrow-alt-circle-right"></i></a>
                         </div>
                     </div>
@@ -203,10 +201,10 @@
                     <!-- Specialist Item Start -->
                     <div class="specialist-item wow fadeInUp" data-wow-delay="0.75s">
                         <div class="icon-box">
-                            <img src="images/icon-specialist-4.svg" alt="">
+                            <img src="images/services/pathology/medical.png" alt="">
                         </div>
                         <div class="specialist-content">
-                            <h3>therapy</h3>
+                            <h3>CPR Test</h3>
                             <a href="#"><i class="fas fa-arrow-alt-circle-right"></i></a>
                         </div>
                     </div>
@@ -385,16 +383,14 @@
                     <!-- Section Title Start -->
                     <div class="section-title">
                         <h3 class="wow fadeInUp">our culture</h3>
-                        <h2 class="text-anime-style-3">Our Infrastructure & Culture</h2>
+                        <h2 class="text-anime-style-3">A living representation of our culture at SB Diagnostics</h2>
                     </div>
                     <!-- Section Title End -->
                 </div>
                 <div class="col-md-6">
                     <!-- Section Title Content Start -->
                     <div class="section-title-content">
-                        <p class="wow fadeInUp">At our medipro , we pride ourselves on fostering a culture of care,
-                            where every individual’s well-being is our utmost priority. Our commitment to excellence in
-                            healthcare is grounded.</p>
+                        <p class="wow fadeInUp">Experience the rich glimpse of Indian culture at SB Diagnostics. Our heritage reflects unity, diversity and timeless traditions. We believe in treating every patient with respect, care and warmth, just like family. Join us in the journey of health and harmony.</p>
                     </div>
                     <!-- Section Title Content End -->
                 </div>
@@ -461,55 +457,7 @@
     <!-- Our Culture Section End -->
 
 
-    <!-- App Download Section Start -->
-    <div class="download-apps">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-6 col-md-7 order-lg-1 order-md-1 order-2">
-                    <!-- Download Apps Description Start -->
-                    <div class="download-apps-description">
-                        <!-- Section Title Start -->
-                        <div class="section-title">
-                            <h3 class="wow fadeInUp">app download</h3>
-                            <h2 class="text-anime-style-3">Download MediPro App & Get 100$ Healthcase.</h2>
-                        </div>
-                        <!-- Section Title End -->
-
-                        <!-- Download Apps Body Start -->
-                        <div class="download-apps-body">
-                            <p class="wow fadeInUp">Welcome to the convenient world of our Medical Website App, where
-                                taking control of your health has never been easier. Download our user-friendly app now
-                                to access a wide range of medical services and resources right at your fingertips.</p>
-                        </div>
-                        <!-- Download Apps Body End -->
-
-                        <!-- Download Apps Footer Start -->
-                        <div class="download-apps-footer wow fadeInUp" data-wow-delay="0.25s">
-                            <div class="download-apps-image">
-                                <a href="#"><img src="images/google-play-img.png" alt=""></a>
-                            </div>
-                            <div class="download-apps-image">
-                                <a href="#"><img src="images/app-store-img.png" alt=""></a>
-                            </div>
-                        </div>
-                        <!-- Download Apps Footer End -->
-                    </div>
-                    <!-- Download Apps Description End -->
-                </div>
-
-                <div class="col-lg-6 col-md-5 order-lg-2 order-md-2 order-1">
-                    <!-- Download Apps Image Start -->
-                    <div class="download-apps-img">
-                        <figure>
-                            <img src="images/app-download.png" alt="">
-                        </figure>
-                    </div>
-                    <!-- Download Apps Image End -->
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- App Download Section End -->
+    
 
     <!-- Footer Start -->
     <footer>
