years and services

--- a/index.html
+++ b/index.html
@@ -442,8 +442,8 @@
 							<!-- Counter Box Start -->
 							<div class="counter-box-1">
 								<div class="counter-content">
-									<h3><span class="counter">100</span>+</h3>
-									<p>doctors</p>
+									<h3><span class="counter">10</span>+</h3>
+									<p>Years</p>
 								</div>
 							</div>
 							<!-- Counter Box End -->
@@ -451,8 +451,8 @@
 							<!-- Counter Box Start -->
 							<div class="counter-box-2">
 								<div class="counter-content">
-									<h3><span class="counter">16</span>+</h3>
-									<p>world office</p>
+									<h3><span class="counter">20</span>+</h3>
+									<p>Services</p>
 								</div>
 							</div>
 							<!-- Counter Box End -->
