--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<div class="preloader">
 		<div class="loading-container">
 			<div class="loading"></div>
-			<div id="loading-icon"><img src="images/loader.svg" alt=""></div>
+			<div id="loading-icon"><img src="images/66.gif" alt=""></div>
 		</div>
 	</div>
 	<!-- Preloader End -->
