--- a/team-single.html
+++ b/team-single.html
@@ -10,7 +10,7 @@
 	<meta name="keywords" content="">
 	<meta name="author" content="MagnumKare (Aditya Mathur)">
 	<!-- Page Title -->
-	<title>MediPro - Hospital HTML Template</title>
+	<title>S.B Diagnostics</title>
 	<!-- Favicon Icon -->
 	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
     <!-- Google Fonts css-->
