--- a/services/digital-x-ray.html
+++ b/services/digital-x-ray.html
@@ -125,13 +125,13 @@
 
                                             <div class="carousel-inner">
                                               <div class="carousel-item active">
-                                                <img src="../images/images/xray-1.jpg" class="d-block w-100 h-auto" alt="...">
+                                                <img src="../images/images/xray-1.webp" class="d-block w-100 h-auto" alt="...">
                                               </div>
                                               <div class="carousel-item">
-                                                <img src="../images/images/xray-2.jpg" class="d-block w-100 h-auto" alt="...">
+                                                <img src="../images/images/xray-2.webp" class="d-block w-100 h-auto" alt="...">
                                               </div>
                                               <div class="carousel-item">
-                                                <img src="../images/images/xray-3.jpg" class="d-block w-100 h-auto" alt="...">
+                                                <img src="../images/images/xray-3.webp" class="d-block w-100 h-auto" alt="...">
                                               </div>
                                             </div>
                                            
